@@ -6,6 +6,7 @@ Nagios Core 4 Change Log
 ------------------
 FIXES
 * Fix comment data being duplicated after a `service nagios reload` or similar (Bryan Heden)
+* Fix check_interval and retry_interval not changing at the appropriate times (Scott Wilkerson)
 
 4.4.1 - 2018-06-25
 ------------------
